# aiq_coap_server

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  makefile  test.py
.github/workflows/: main-server-deploy.yml
dashboard/: dashboard.json  diagnostics_dashboard.json
diagnostic/: makefile  pyproject.toml
diagnostic/app/: main.py
diagnostic/app/cmd/: otctl.py  parser.py
diagnostic/app/tasks/: runner.py
scripts/: coap_test.py
server/: Dockerfile  create_env.sh  makefile  migrations.makefile  pyproject.toml  runner.sh
server/app/: log.py  main.py
server/app/config/: env_manager.py
server/app/controllers/: border_router.py
server/app/managers/: aiq_manager.py  br_manager.py  station_manager.py
server/app/repositories/aiq_coap/: client.py  managers.py
server/app/repositories/db/: connector.py  models.py
server/app/repositories/mysql/: database.py
server/app/repositories/postgres/: database.py  managers.py  models.py
server/app/resources/: __init__.py  aiq_data.py  aiq_management.py  index.py  station_data_forwarder.py  station_data_storage.py
server/app/security/: payload_validator.py
server/app/serializers/: __init__.py  request.py
server/app/telegram/: bot.py
server/app/types/: __init__.py
server/migrations/: env.py
server/migrations/versions/: 28f42edd9fb0_add_indexes_to_ids_in_most_tables.py  3953e2822334_improve_db_schema_with_new_sensor_data_.py  65856ee0df0e_init.py  74b685228bd5_add_support_for_bme688.py  8d2149a11367_add_indexes_to_important_columns.py  b901ade8852b_added_border_routers_table.py  f8902e2bca44_add_sfa30_data.py
server/scripts/: configure_docker.sh  db_dump.py
server/tests/: conftest.py
server/tests/fixtures/: aiq_data.py  br_data.py  coap_client.py  management_bot.py  payload_validator.py  sensor_data.py
server/tests/managers/: aiq_manager_test.py  br_manager_test.py
server/tests/resources/: aiq_data_test.py  station_data_forwarder_test.py  station_data_storage_test.py
