[tool.ruff]
lint.ignore = ["E203","E231","E261","E402","E501","E711","E712","E722","W605","E741"]
line-length = 135


[tool.poetry]
name = "diagnostic"
version = "0.1.0"
description = ""
authors = ["Wladymir Brborich <wabrborich@hotmail.com>"]
package-mode = false
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
